@@ -13,13 +13,6 @@
 
 #include "headers.h"
 #include "Viewer.h"
-#ifdef AQUA
-#define KeyPress        2
-#define KeyRelease      3
-#define ButtonPress     4
-#define ButtonRelease   5
-#define MotionNotify    6
-#endif
 
 static int viewer_type = NONE;
 int viewer_initialized = FALSE;
